# HelloHaskell

./: .travis.yml  HOGE.txt  README-Test.txt  README.md  auto-unit-test.cabal
Code/: Math.hs
test/: MathSpec.hs
