Name:                   auto-unit-test
Version:                0.0.0
Author:                 U1 <u1@hoge.net>
Maintainer:             U1 <u1@hoge.net>
License:                BSD3
License-File:           LICENSE
Synopsis:               Unit test example for Haskell
Description:            Using Cabal as test framework for doctest and hspec
Category:               Math
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  Exposed-Modules:      Code.Math
  Build-Depends:        base >= 4 && < 5
                      , array
                              

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  ghc-options: -Wall
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              MathSpec.hs
  Build-Depends:        base
                      , hspec >= 1.3
                      , QuickCheck
                      , auto-unit-test

Source-Repository head
  Type:                 git
  Location:             https://github.com/kuota/HelloHaskell
